[BI-43] fixed overflowon the course home page

--- a/lms/static/sass/base/_override.scss
+++ b/lms/static/sass/base/_override.scss
@@ -3463,3 +3463,7 @@ body .content-wrapper .page-header.has-secondary .page-header-secondary {
 .wrapper-msg.urgency-high .msg {
     color: #474747;
 }
+
+.updates-article {
+    word-wrap: break-word;
+}
